// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Search Page renders correctly matches snapshot 1`] = `
<section
  className="mb-3 px-2"
>
  <form
    className=""
  >
    <div
      className="form-row"
    >
      <label
        className="pgn__form-label my-auto"
        htmlFor="userIdentifier"
      >
        Username, Email or LMS User ID
      </label>
      <div
        className="pgn__form-control-decorator-group ml-1 mr-1"
      >
        <input
          className="form-control"
          defaultValue=""
          name="userIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
        />
        
        
      </div>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Search
      </button>
    </div>
  </form>
</section>
`;

exports[`User Search Page renders correctly matches snapshot for course team page 1`] = `
<section
  className="mb-3"
>
  <form
    className="course-team-management-user-search-form"
  >
    <div
      className="course-team-management-user-search-form-row form-row"
    >
      <div
        className="pgn__form-control-decorator-group has-appended-node has-trailing-element has-floating-label flex-grow-1 ml-1 mr-1"
      >
        <input
          className="form-control"
          defaultValue=""
          name="userIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
        />
        <div
          className="pgn__form-control-decorator pgn__form-control-decorator-trailing"
        >
          <span
            className="pgn__icon"
          >
            <svg
              aria-hidden={true}
              fill="none"
              focusable={false}
              height={24}
              role="img"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5Zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          className="pgn__form-control-floating-label"
        >
          <div
            className="pgn__form-control-floating-label-content"
          >
            <label
              className="pgn__form-control-floating-label-text"
            >
              Username or email
            </label>
          </div>
        </div>
      </div>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Search
      </button>
    </div>
  </form>
</section>
`;
